Fix xl column class, add variant to prevent columns from wrapping

--- a/src/assets/styles/base/grid/_grid.scss
+++ b/src/assets/styles/base/grid/_grid.scss
@@ -14,12 +14,16 @@
     & > [class*="col-"] {
         flex-grow: 1;
         flex-shrink: 1;
-        min-width: 0;
     }
 
     & > .col.-nogrow,
     & > [class*="col-"].-nogrow {
         flex-grow: 0;
+    }
+
+    & > .col.-nowrap,
+    & > [class*="col-"].-nowrap {
+        min-width: 0;
     }
 
     & > .col.-noshrink,
